--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
         <link rel="stylesheet" type="text/css" href="node_modules/semantic-ui-css/semantic.min.css">
     </head>
     <body>
-        <div id="app"></div>
+        <div>
+            <div id="app"></div>
+        </div>
 
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="node_modules/alertify.js/dist/js/alertify.js"></script>
         <script src="dist/build.js"></script>
     </body>
 </html>
